# korora-control-center

./: README  configure.ac
panels/: Makefile.am
panels/drivers/: Makefile.am  cc-drivers-panel.c  cc-drivers-panel.h  drivers-module.c  drivers.ui  gnome-drivers-panel.desktop.in.in
